# fully_functional_chatbot_backend

./: Dockerfile  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 12ef279c0370_update_conversation_table.py  1c32556ab4ff_make_summary_nulable.py  97ca8c68baa1_create_conversation_table.py  cfe09ef4ac80_update_chat_session_table_with_summary_.py  d2a09e131fba_create_conversations_table.py  d410505c4f45_make_summary_nulable.py  dbbb16bb9545_add_cascade_delete_to_conversation_.py  f48cfd70b2fc_make_session_titile_default_none.py  fa670938f2b4_make_session_titile_default_none.py
src/: config.py  repository.py
src/controller/: chat_controller.py  chat_session_contoller.py
src/controller/ai_controllers/: session_summarizer.py  title_generator.py
src/db_actions/: chat_session.py  conversation.py
src/handlers/chat/: chat_conversation_hitory.py  chat_handler.py  chat_ssesion_handle.py  streaming_chat_handler.py  structured_chat_handler.py
src/handlers/health/: health_handler.py
src/libs/llm/: mistral.py
src/libs/postgres/: database.py
src/libs/redis/: redis.py
src/models/: BaseMixing.py  chat_session.py  conversation.py
src/prompts/: chatbot_response_generator.py  title_generator_prompt.py
src/redis_actions/: chat_session_actions.py
src/routes/chat/: chat_route.py  chat_session_route.py
src/routes/health/: health_route.py
